tests/snapshots/state_snapshots__search_empty.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │┏Artists (filter: zzzno┓┌Albums────────────────────┐┌Tracks────────────────────────────────┐
›   1 Artists              │┃no matches for 'zzznom┃│Cosmic                    ││▸  1 Song1 — 40mP          24bit-96kHz│
›   2 Playlists            │┃                      ┃│                          ││                                      │
›   3 Queue                │┃                      ┃│                          ││                                      │
›   4 YouTube              │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
DISCOVER                   │┃                      ┃│                          ││                                      │
♫   H Home                 │┃                      ┃│                          ││                                      │
✦   S Discover             │┃                      ┃│                          ││                                      │
◎ :radio Radio             │┃                      ┃│                          ││                                      │
◆ :gen Generator           │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
TOOLS                      │┃                      ┃│                          ││                                      │
/   / Search               │┃                      ┃│                          ││                                      │
!   D Diagnostics          │┃                      ┃│                          ││                                      │
?   ? Help                 │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local [Y —]
