tests/snapshots/state_snapshots__search_populated.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏Artists (filter: 40▏)━┓┌Albums────────────────────┐┌Tracks────────────────────────────────────────────────────────┐
2   ┃40mP                  ┃│Cosmic                    ││▸  1 Song1 — Cosmic                                24bit-96kHz│
3   ┃                      ┃│                          ││                                                              │
4   ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────────────────────────────┘
▶ — nothing playing —   --bit / -- kHz   vol ▰▰▰▱ 70%
                          --:-- / --:--                                       SHUF off · RPT off · CONT off · MODE local
[!] YT: not configured — run :yt auth browser <chrome>
