tests/snapshots/state_snapshots__yt_authenticating.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏YouTube━━━━━━━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃                      ┃│authenticating…                                                                           │
3   ┃                      ┃│                                                                                          │
4   ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
▶ — nothing playing —   --bit / -- kHz   vol ▰▰▰▱ 70%
                          --:-- / --:--                                       SHUF off · RPT off · CONT off · MODE local
[~] YT: authenticating…
