tests/snapshots/state_snapshots__yt_no_playlists.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏YouTube [ok]━━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃                      ┃│select a list to load its tracks                                                          │
3   ┃                      ┃│                                                                                          │
4   ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off
Enter play · q quit · ? help · 1-4 view · > < next prev · M mode · / search
