tests/snapshots/state_snapshots__yt_ready.snap
---
source: tests/state_snapshots.rs
expression: s
---
1  │┏YouTube [ok]━━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2  │┃♫ Liked Songs         ┃│select a list to load its tracks                                                          │
3  │┃✦ Focus Flow          ┃│                                                                                          │
4  │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┃                      ┃│                                                                                          │
   │┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
   │┌Suggested / Up Next───────────────────────────────────────────────────────────────────────────────────────────────┐
   ││▶ Focus Flow →                                                                                                    │
   │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · YT · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local [Y ok]  Enter play · q quit · ? help · 1-4 view · > < next prev · M mode · S discover
