tests/snapshots/state_snapshots__yt_signed_out.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏YouTube [!]━━━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃                      ┃│signed out — run :yt auth to reconnect                                                    │
3   ┃                      ┃│                                                                                          │
4   ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · YT… · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local [Y —] · [!] YT: signed out — run :yt auth to reconnect
