tests/snapshots/state_snapshots__yt_synchronizing.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏YouTube [~]━━━━━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃                      ┃│loading…                                                                                  │
3   ┃                      ┃│                                                                                          │
4   ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · YT… · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local · [~] YT: synchronizing…
